Ensure that help buttons do not wrap to the next line.

--- a/app/assets/stylesheets/_etlite.sass
+++ b/app/assets/stylesheets/_etlite.sass
@@ -63,7 +63,7 @@ body
       @extend .clearfix
     .label, .value
       float: left
-      width: 160px
+      width: 175px
     .label .help
       background: url(/assets/range-help.png) 0 0 no-repeat
       cursor: pointer
@@ -76,7 +76,7 @@ body
     .value
       font-size: 15px
       text-align: right
-      width: 88px
+      width: 73px
     .control
       background: url(/assets/range-ticks.png) 11px 0 no-repeat
       height: 32px
